changed name of library to uStepper S32

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=uStepperSTM
-version=2.3.1
+name=uStepperS32
+version=0.1.0
 author=uStepper ApS
 maintainer=Thomas Olsen (thomas@ustepper.com)
-sentence=Library offering support for uStepperS
-paragraph=uStepper S support library
-category=Device Control
-url=https://github.com/uStepper/uStepperS/tree/master/
+sentence=Library offering support for uStepper S32
+paragraph=uStepper S32 support library
+category=Stepper Motor Control
+url=https://github.com/uStepper/uStepperS32/tree/master/
 architectures=*
