changed category in properties file

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=uStepperS32
-version=0.1.1
+version=1.0.0
 author=uStepper ApS
 maintainer=Thomas Olsen (thomas@ustepper.com)
 sentence=Library offering support for uStepper S32
 paragraph=uStepper S32 support library
-category=Stepper Motor Control
+category=Device Control
 url=https://github.com/uStepper/uStepperS32/tree/master/
 architectures=*
